增加安装博客功能